fix multiselct overflow bug

--- a/sass/modules/_managelists.sass
+++ b/sass/modules/_managelists.sass
@@ -492,7 +492,6 @@
   +pie-clearfix
   +box-sizing(border-box)
   +box-shadow(rgba($blue-dark,$xsmall) 0 0 $xsmallem inset)
-  position: relative
   border: 1px solid $blue
   height: rhythm(12)
   background: rgba($blue-dark,$xxxsmall)
