--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -3894,7 +3894,6 @@ footer[role="contentinfo"] small {
   -webkit-box-shadow: rgba(75, 87, 101, 0.382) 0 0 0.382em inset;
   -o-box-shadow: rgba(75, 87, 101, 0.382) 0 0 0.382em inset;
   box-shadow: rgba(75, 87, 101, 0.382) 0 0 0.382em inset;
-  position: relative;
   border: 1px solid #516985;
   height: 19.416em;
   background: rgba(75, 87, 101, 0.146);
